--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,4 +1,10 @@
 <h2>Productos</h2>
+<div action="/api/sessions/logout">
+    <h3>Usuario: {{user.first_name}} {{user.last_name}}</h3>
+    <p>Correo:{{user.email}}</p>
+    <p>role: {{user.role}}</p>
+  <a href="/">Cerrar</a>
+</div>
 <br>
 <hr />
 <div align="center">
