--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -2,9 +2,14 @@
 <div action="/api/sessions/logout">
     <h3>Usuario: {{user.first_name}} {{user.last_name}}</h3>
     <p>Correo:{{user.email}}</p>
-    <p>role: {{user.role}}</p>
-  <a href="/">Cerrar</a>
+    <p>role: {{user.rol}}</p>
+    <p>carrito: {{user.cart}}</p>
+  <a href="/"><img src="https://cdn-icons-png.flaticon.com/512/152/152534.png" alt="" style="height: 30px;"></a> 
+  <br>
+  <a href="/current"><img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="" style="height: 30px;"></a>
 </div>
+
+
 <br>
 <hr />
 <div align="center">
@@ -39,7 +44,7 @@
             <h1>Carrito:{{cart}}</h1>
             {{#each products}}
             <tr>
-                <td><button class="btn btn-danger" onclick="agregarCarrito('{{../cart}}','{{this._id}}')" >Agregar al carrito</button></td>
+                <td><button class="btn btn-danger" onclick="agregarCarrito('{{../user.cart}}','{{this._id}}')" >Agregar al carrito</button></td>
                 <td>{{this.title}}</td>
                 <td>{{this.description}}</td>
                 <td>{{this.price}}</td>
