Desafio-aplicacion de buenas practicas

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -2,7 +2,7 @@
 <div action="/api/sessions/logout">
     <h3>Usuario: {{user.first_name}} {{user.last_name}}</h3>
     <p>Correo:{{user.email}}</p>
-    <p>role: {{user.rol}}</p>
+    <p>role: {{user.role}}</p>
     <p>carrito: {{user.cart}}</p>
   <a href="/"><img src="https://cdn-icons-png.flaticon.com/512/152/152534.png" alt="" style="height: 30px;"></a> 
   <br>
