--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -63,7 +63,6 @@ agregarCarrito = (cid, pid) => {
         product: pid,
         quantify: 1
     };
-
     fetch(`/api/carts/${cid}/products/${pid}`, {
         method: "POST",
         headers: {
@@ -76,12 +75,13 @@ agregarCarrito = (cid, pid) => {
         if (data.status === 'success') {
             alert("Producto agregado al carrito");
         } else {
-            alert("Error al agregar el producto al carrito");
+            console.log(data)
+            alert("Error al agregar el producto al carrito2");
         }
     })
     .catch(error => {
-        console.error("Error al agregar el producto al carrito:", error);
-        alert("Error al agregar el producto al carrito");
+        console.error("Error al agregar el producto al carrito1:", error);
+        alert("Error al agregar el producto al carrito1");
     });
 }
 </script>
