--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -6,6 +6,7 @@
     <p>carrito: {{user.cart}}</p>
   <a href="/"><img src="https://cdn-icons-png.flaticon.com/512/152/152534.png" alt="" style="height: 30px;"></a> 
   <br>
+  <a href="/cart/{{user.cart}}"><img src="https://cdn-icons-png.flaticon.com/512/3144/3144456.png" alt=""style="height: 30px;"></a>
   <a href="/current"><img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="" style="height: 30px;"></a>
 </div>
 
