--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -28,7 +28,7 @@
         <td>{{this.description}}</td>
         <td>{{this.price}}</td>
         <td>{{this.code}}</td>
-        <td>{{this.categoria}}</td>
+        <td>{{this.category}}</td>
         <td>{{this.stock}}</td>
     </tr>
     {{/each}}
